--- a/index.html
+++ b/index.html
@@ -15,35 +15,64 @@
 
 </head>
 <body>
-	<div class="container">
+	<div class="container"> 	
 		<div class="jumbotron">
-			<div class="row">
-				<div class="col-md-3"></div>
-				<div class="col-md-6">
-					<h1>Address Book</h1>
-				</div><!--col-md-6-->
-			</div><!--row-->
-		</div><!--jumbotron-->
-	</div><!--1st container-->
-
-	<div class="container">
-		<h3>Tasks</h3>
-		<form data-bind="submit: addTask">
-			Add task: <input data-bind="value: newTaskText" placeholder="What needs to be done?" />
-			<button type="submit">Add</button>
-		</form>
-		<ul data-bind="foreach: tasks, visible: tasks().length > 0">
-			<li>
-				<input type="checkbox" data-bind="checked: isDone" />
-				<input data-bind="value: title, disable: isDone" />
-				<a href="#" data-bind="click: $parent.removeTask">Delete</a>
-			</li>
-		</ul>
-		You have <b data-bind="text: incompleteTasks().length">&nbsp;</b> incomplete task(s)
-		<span data-bind="visible: incompleteTasks().length == 0"> - it's beer time!</span>
-		<button data-bind="click: save">Save</button>
-	</div><!--2nd container-->
-			
+			<div class="row">  	
+				<div class="col-md-6 col-md-offset-3"> 	
+ 					<h1>Address Book</h1>
+				</div>
+			</div> 	
+ 		</div> 	 	
+ 		
+ 	<div class="row"> 	
+ 		<div class="col-md-9">
+			<h2>Contacts</h2> 	
+ 			<div class="panel panel-default" id='contactsList'> 	
+ 				<table class="table table-bordered contactsEditor"> 	
+ 					<tr> 	
+ 						<th>First name</th> 	
+ 						<th>Last name</th> 	
+ 						<th>Phone numbers</th> 	
+ 					</tr> 	
+ 				<tbody data-bind="foreach: contacts"> 	
+ 					<tr> 	
+ 						<td> 	
+ 						<input data-bind='value: firstName' /> 	
+ 						<div><a href='#' class="btn btn-default btn-xs" data-bind='click: $root.removeContact'>Delete</a></div> 	
+ 						</td> 	
+ 						<td><input data-bind='value: lastName' /></td> 	
+ 						<td> 	
+ 				<table> 	
+ 				<tbody data-bind="foreach: phones"> 	
+ 					<tr> 	
+ 						<td><input data-bind='value: type' /></td> 	
+ 						<td><input data-bind='value: number' /></td> 	
+ 						<td><a href='#' class="btn btn-default btn-xs" data-bind='click: $root.removePhone'>Delete</a></td> 	
+ 					</tr> 	
+ 				</tbody> 	
+ 				</table> 	
+ 					<a href='#' class="btn btn-default btn-xs" data-bind='click: $root.addPhone'>Add number</a> 	
+ 					</td> 	
+ 					</tr> 	
+ 				</tbody> 	
+ 				</table> 	
+ 			</div><!--contact list--> 	 	
+ 				<p> 	
+ 				<button type="button" class="btn btn-default btn-sm" data-bind='click: addContact'>Add a contact</button> 
+ 				<button type="button" class="btn btn-default btn-sm" data-bind='click: save, enable: contacts().length > 0'>Save to JSON</button> 	
+ 				</p> 	
+ 	
+ 				<textarea class="form-control" data-bind='value: lastSavedJson' rows='5' cols='60' disabled='disabled'> </textarea> 	
+ 	
+ 			</div><!--col-md-6--> 	
+ 		</div><!--row--> 	
+ 	</div><!--container--> 	
+ 	
+ 	
+ 
+	<br>
+	<br>
+	<br>			
 	<div class="navbar navbar-default navbar-fixed-bottom">
  		<div class="container">
   			<p class="navbar-text pull-left">Site Built By: Sergio Merida</p>
